update bug code
